--- a/RunescapeCacheToolsGUI/App.xaml
+++ b/RunescapeCacheToolsGUI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="RunescapeCacheToolsGUI.App"
+﻿<Application x:Class="RuneScapeCacheToolsGUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RunescapeCacheToolsGUI"
+             xmlns:local="clr-namespace:RuneScapeCacheToolsGUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
