--- a/RunescapeCacheToolsGUI/ExtractJobUserControl.xaml
+++ b/RunescapeCacheToolsGUI/ExtractJobUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="RunescapeCacheToolsGUI.ExtractJobUserControl"
+﻿<UserControl x:Class="RuneScapeCacheToolsGUI.ExtractJobUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,11 +7,11 @@
 			 d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <ProgressBar x:Name="progressBar" Margin="10,10,10,5" Height="20"/>
-        <Label x:Name="statusLabel" Content="Label" HorizontalAlignment="Left" Margin="10,5,0,5" Grid.Row="1" Padding="1"/>
-        <Button x:Name="actionButton" Content="Close" Margin="0,5,10,5" Grid.Row="1" HorizontalAlignment="Right" Click="actionButton_Click"/>
+        <Label x:Name="statusLabel" HorizontalAlignment="Left" Margin="10,5,0,2.5" Grid.Row="1" Padding="1"/>
+        <Button x:Name="actionButton" Content="Close" Margin="0,2.5,10,5" Grid.Row="1" HorizontalAlignment="Right" Click="actionButton_Click"/>
+        <ProgressBar x:Name="progressBar" Margin="10,2.5,10,2.5" Height="20" Grid.Row="0"/>
     </Grid>
 </UserControl>
