--- a/RuneScapeCacheToolsGUI/CacheJobUserControl.xaml
+++ b/RuneScapeCacheToolsGUI/CacheJobUserControl.xaml
@@ -11,7 +11,9 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Label x:Name="statusLabel" HorizontalAlignment="Left" Margin="10,5,0,2.5" Grid.Row="1" Padding="1"/>
-        <Button x:Name="actionButton" Content="Close" Margin="0,2.5,10,5" Grid.Row="1" HorizontalAlignment="Right" Click="actionButton_Click"/>
+        <Button x:Name="cancelButton" Content="Cancel" Margin="0,2.5,10,5" Grid.Row="1" HorizontalAlignment="Right" Click="cancelButton_Click"/>
         <ProgressBar x:Name="progressBar" Margin="10,2.5,10,2.5" Height="20" Grid.Row="0"/>
+        <TextBlock x:Name="percentageTextBlock" Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="0"
+			Text="{Binding ElementName=progressBar, Path=Value, StringFormat={}{0:0}%}"/>
     </Grid>
 </UserControl>
