--- a/RuneScapeCacheToolsGUI/MainWindow.xaml
+++ b/RuneScapeCacheToolsGUI/MainWindow.xaml
@@ -20,16 +20,27 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="cacheDirectoryTextBox" Margin="10,10,170,5" TextWrapping="Wrap" Text="cacheDirectoryTextBox" Grid.ColumnSpan="2" Height="20" IsReadOnly="True"/>
-        <Button x:Name="defaultCacheDirectoryButton" Content="Default" Grid.Column="1" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Click="defaultCacheDirectoryButton_Click"/>
-        <Button x:Name="changeCacheDirectoryButton" Content="Change..." Grid.Column="1" HorizontalAlignment="Right" Margin="0,10,90,0" VerticalAlignment="Top" Width="75" Click="changeCacheDirectoryButton_Click"/>
-        <TextBox x:Name="outputDirectoryTextBox" Margin="10,5,170,5" TextWrapping="Wrap" Text="outputDirectoryTextBox" Grid.ColumnSpan="2" Grid.Row="1" Height="20" IsReadOnly="True"/>
-        <Button x:Name="showOutputDirectoryButton" Content="Show" Grid.Column="1" HorizontalAlignment="Right" Margin="0,5,10,5" VerticalAlignment="Top" Width="75" Grid.Row="1" Click="showOutputDirectoryButton_Click"/>
-        <Button x:Name="changeOutputDirectoryButton" Content="Change..." Grid.Column="1" HorizontalAlignment="Right" Margin="0,5,90,5" VerticalAlignment="Top" Width="75" Grid.Row="1" Click="changeOutputDirectoryButton_Click"/>
-        <TreeView x:Name="cacheTreeView" Margin="10,5,5,10" Grid.Row="2" BorderBrush="#FF828790"/>
-        <Border BorderBrush="#FF828790" BorderThickness="1" Margin="5,5,10,10" Grid.Row="2" Grid.Column="1">
+        <Menu x:Name="menu" Margin="0,0,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.Row="0">
+            <MenuItem Header="Soundtrack">
+                <MenuItem x:Name="showSoundtrackDirectoryMenuItem" Header="Show" Click="showSoundtrackDirectoryMenuItem_Click"/>
+                <MenuItem x:Name="createSoundtrackDefaultMenuItem" Header="Create" Click="createSoundtrackDefaultMenuItem_Click"/>
+                <MenuItem x:Name="createSoundtrackLosslessMenuItem" Header="Create (flac)" Click="createSoundtrackLosslessMenuItem_Click"/>
+                <MenuItem x:Name="updateSoundtrackNamesMenuItem" Header="Update Names (unfinished)" IsEnabled="False"/>
+                <MenuItem x:Name="showSoundtrackNamesMenuItem" Header="Show Names" Click="showSoundtrackNamesMenuItem_Click"/>
+                <MenuItem x:Name="showMissingSoundtrackNamesMenuItem" Header="Show Missing Names (unfinished)" IsEnabled="False" Click="showMissingSoundtrackNamesMenuItem_Click"/>
+            </MenuItem>
+        </Menu>
+        <TextBox x:Name="cacheDirectoryTextBox" Margin="10,10,170,5" TextWrapping="Wrap" Text="cacheDirectoryTextBox" Grid.ColumnSpan="2" Height="20" IsReadOnly="True" Grid.Row="1"/>
+        <Button x:Name="defaultCacheDirectoryButton" Content="Default" Grid.Column="1" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Click="defaultCacheDirectoryButton_Click" Grid.Row="1"/>
+        <Button x:Name="changeCacheDirectoryButton" Content="Change..." Grid.Column="1" HorizontalAlignment="Right" Margin="0,10,90,0" VerticalAlignment="Top" Width="75" Click="changeCacheDirectoryButton_Click" Grid.Row="1"/>
+        <TextBox x:Name="outputDirectoryTextBox" Margin="10,5,170,5" TextWrapping="Wrap" Text="outputDirectoryTextBox" Grid.ColumnSpan="2" Grid.Row="2" Height="20" IsReadOnly="True"/>
+        <Button x:Name="showOutputDirectoryButton" Content="Show" Grid.Column="1" HorizontalAlignment="Right" Margin="0,5,10,5" VerticalAlignment="Top" Width="75" Grid.Row="2" Click="showOutputDirectoryButton_Click"/>
+        <Button x:Name="changeOutputDirectoryButton" Content="Change..." Grid.Column="1" HorizontalAlignment="Right" Margin="0,5,90,5" VerticalAlignment="Top" Width="75" Grid.Row="2" Click="changeOutputDirectoryButton_Click"/>
+        <TreeView x:Name="cacheTreeView" Margin="10,5,5,10" Grid.Row="3" BorderBrush="#FF828790"/>
+        <Border BorderBrush="#FF828790" BorderThickness="1" Margin="5,5,10,10" Grid.Row="3" Grid.Column="1">
             <StackPanel x:Name="jobsStackPanel"/>
         </Border>
     </Grid>
