--- a/RuneScapeCacheToolsGUI/MainWindow.xaml
+++ b/RuneScapeCacheToolsGUI/MainWindow.xaml
@@ -33,13 +33,13 @@
                 <MenuItem x:Name="showMissingSoundtrackNamesMenuItem" Header="Show Missing Names (unfinished)" IsEnabled="False" Click="showMissingSoundtrackNamesMenuItem_Click"/>
             </MenuItem>
         </Menu>
-        <TextBox x:Name="cacheDirectoryTextBox" Margin="10,10,170,5" TextWrapping="Wrap" Text="cacheDirectoryTextBox" Grid.ColumnSpan="2" Height="20" IsReadOnly="True" Grid.Row="1"/>
+        <TextBox x:Name="cacheDirectoryTextBox" Margin="10,10,170,5" TextWrapping="Wrap" Text="cacheDirectoryTextBox" Grid.ColumnSpan="2" Height="20" IsReadOnly="True" Grid.Row="1" Grid.Column="0"/>
         <Button x:Name="defaultCacheDirectoryButton" Content="Default" Grid.Column="1" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="75" Click="defaultCacheDirectoryButton_Click" Grid.Row="1"/>
         <Button x:Name="changeCacheDirectoryButton" Content="Change..." Grid.Column="1" HorizontalAlignment="Right" Margin="0,10,90,0" VerticalAlignment="Top" Width="75" Click="changeCacheDirectoryButton_Click" Grid.Row="1"/>
-        <TextBox x:Name="outputDirectoryTextBox" Margin="10,5,170,5" TextWrapping="Wrap" Text="outputDirectoryTextBox" Grid.ColumnSpan="2" Grid.Row="2" Height="20" IsReadOnly="True"/>
+        <TextBox x:Name="outputDirectoryTextBox" Margin="10,5,170,5" TextWrapping="Wrap" Text="outputDirectoryTextBox" Grid.ColumnSpan="2" Grid.Row="2" Height="20" IsReadOnly="True" Grid.Column="0"/>
         <Button x:Name="showOutputDirectoryButton" Content="Show" Grid.Column="1" HorizontalAlignment="Right" Margin="0,5,10,5" VerticalAlignment="Top" Width="75" Grid.Row="2" Click="showOutputDirectoryButton_Click"/>
         <Button x:Name="changeOutputDirectoryButton" Content="Change..." Grid.Column="1" HorizontalAlignment="Right" Margin="0,5,90,5" VerticalAlignment="Top" Width="75" Grid.Row="2" Click="changeOutputDirectoryButton_Click"/>
-        <TreeView x:Name="cacheTreeView" Margin="10,5,5,10" Grid.Row="3" BorderBrush="#FF828790"/>
+        <TreeView x:Name="cacheTreeView" Margin="10,5,5,10" Grid.Row="3" BorderBrush="#FF828790" Grid.Column="0"/>
         <Border BorderBrush="#FF828790" BorderThickness="1" Margin="5,5,10,10" Grid.Row="3" Grid.Column="1">
             <StackPanel x:Name="jobsStackPanel"/>
         </Border>
