--- a/RuneScapeCacheToolsGUI/MainWindow.xaml
+++ b/RuneScapeCacheToolsGUI/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Viller's Runescape CacheMehRename Tools" Height="511" Width="750">
+        Title="Viller's Runescape Cache Tools" Height="511" Width="750">
 	<Window.Resources>
 		<ContextMenu x:Key="ExtractContextMenu">
 			<MenuItem x:Name="showExtractedMenuItem" Header="Show" Click="showOutputDirectoryMenuItem_Click" />
